# two_boards_system_pico

./: CMakeLists.txt  README.md  main.cpp  registers.cpp
harmonogram/: harmonogram.cpp
py/: communication.py  internet.py  main.py  secret.py
time/: time.cpp
uart/: crc16.cpp  uart_communication_other_board.cpp
